src/renderer/app.css
/* Reset Styles: http://meyerweb.com/eric/tools/css/reset/ */

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* Variables */

:root {
  /* Colors */
  --colorBlueBlack: #102542;
  --colorBlack: var(--colorBlack);
  --colorSecondaryGrey: #637389;
  --colorPaleGrey: #d5dfe5;
  --colorInputGrey: #e9edf0;
  --colorOnline: rgb(113, 227, 65);
  --colorLink: #0645ad;
  --colorDestructive: #f87060;

  /* Sizing */
  --cellSize: 20px;
  --halfCellSize: 10px;
}

/* Global */

a {
  cursor: pointer;
}

.hidden {
  visibility: hidden;
}

/* App Styles */

html,
body,
#app,
[data-reactroot],
.react-contextmenu-wrapper,
.board {
  width: 100%;
  height: 100%;
}

body {
  font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
  font-size: 14px;
  line-height: var(--cellSize);
  -webkit-font-smoothing: antialiased;
  height: calc(100% - 40px);
  cursor: default;
}

input {
  font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
  font-size: 14px;
  line-height: inherit;
  color: var(--colorBlueBlack);
  padding: 0 8px;
  box-sizing: border-box;
  background: transparent;
  border: 0px;
  outline: none;
}

strong {
  font-weight: bold;
}

em {
  font-style: italic;
}

/* End globals */

.DocLink {
  display: flex;
  align-items: center;
  width: 100%;
}

.DocLink__title {
  margin-left: 10px;
  -webkit-user-drag: none;
  user-select: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  max-width: 70%;
}

.NothingFound .fa {
  font-size: 24px;
}

/* Tabs */
.Tabs {
  display: flex;
}

.Tabs__tab > .fa {
  height: auto;
  width: auto;
  font-size: 16px;
  margin-right: 4px;
}

.Tabs__tab {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 14px;
  line-height: 16px;
  flex-grow: 1;
  text-align: center;
  background: var(--colorPaleGrey);
  padding: 12px 0;
  cursor: pointer;
  color: var(--colorSecondaryGrey);
}

.Tabs__tab--active {
  background: #ffffff;
  color: var(--colorBlueBlack);
}

/* Homepage */

.container {
  width: 75%;
  margin: 0 auto;
}

.Jumbotron {
  margin: 20px 0;
}

.Jumbotron__branding {
  display: flex;
  align-items: center;
  justify-content: center;
}

.Jumbotron__branding h1 {
  font-size: 24px;
  margin-left: 10px;
  color: #102542;
  text-transform: lowercase;
}

.Jumbotron__tagline {
  width: 50%;
  margin: 0 auto;
  font-size: 24px;
  text-align: center;
  margin-top: 10px;
  color: #102542;
  line-height: 36px;
}

.Button {
  border-radius: 4px;
  background: #637389;
  padding: 0.75em 2em;
  color: white;
  text-decoration: none;
  font-size: 12px;
}

.Downloads__options {
  margin-top: 30px;
  display: flex;
  justify-content: space-around;
}

.Download__options__option img {
  display: block;
}

.ImageBadge {
  width: 60px;
  height: 60px;
  border-radius: 4px;
  display: flex;
  text-align: center;
  justify-content: center;
  margin: 0 auto 30px;
}

.ImageBadge--dark {
  background: #102542;
}

.ImageBadge--blue {
  background: #00adef;
}

.ImageBadge--green {
  background: #388816;
}

.Banner {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  margin-bottom: 20px;
}

.Banner__label {
  margin: 0 20px;
  color: var(--colorSecondaryGrey);
}

.Banner__wing {
  height: 1px;
  background: #e9edf0;
  flex-grow: 1;
}

.Gallery {
  margin: 40px 0;
}

.Gallery p {
  font-size: 28px;
  color: var(--colorSecondaryGrey);
  line-height: 36px;
  text-align: center;
  width: 75%;
  margin: 40px auto;
}

.Gallery img {
  width: 100%;
}

.Features {
  margin: 40px 0;
}

.Features__list {
  margin-top: 40px;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-row: auto;
  grid-gap: 50px 95px;
}

.Feature {
  display: flex;
}

.Feature .Badge {
  margin-bottom: auto;
}

.Feature__body {
  margin-left: 10px;
}

.Feature__body__label {
  font-weight: bold;
}

.Technology__list {
  margin-top: 40px;
  display: flex;
  justify-content: space-between;
  color: #102542;
}

.Technology__list__section {
  width: 25%;
}

.Technology__label {
  margin-bottom: 20px;
}

.Footer p {
  margin-top: 60px;
}

.Footer {
  margin: 40px 0 60px;
}

